--- a/PortfolioApp/Views/Shared/_Layout.cshtml
+++ b/PortfolioApp/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="~/css/site.css?v=5.0" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css?v=5.5" asp-append-version="true" />
 
     <!-- External JavaScript Libraries -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
@@ -69,7 +69,7 @@
             <a href="#contact">Contact</a>
         </nav>
 
-
+        <i class="bx bx-menu" id="menu-icon"></i>
     </header>
 
     <!-- Main Content -->
