Hide navbar on mobile devices (max-width: 768px)

--- a/PortfolioApp/wwwroot/css/site.css
+++ b/PortfolioApp/wwwroot/css/site.css
@@ -227,6 +227,13 @@ body {
   width: 100%;
 }
 
+/* Hide navbar on mobile devices */
+@media (max-width: 768px) {
+  .navbar {
+    display: none !important;
+  }
+}
+
 /* Home Section */
 section {
   min-height: auto;
