Increase top spacing between navbar and home content in desktop mode (8rem)

--- a/PortfolioApp/wwwroot/css/site.css
+++ b/PortfolioApp/wwwroot/css/site.css
@@ -264,6 +264,13 @@ section {
   margin: 0 auto;
 }
 
+/* Desktop mode: Increase top padding for better visual separation */
+@media (min-width: 769px) {
+  .home {
+    padding-top: 8rem;
+  }
+}
+
 /* Other sections should have consistent but smaller spacing */
 .about, .skills, .experience, .projects, .achievements, .contact {
   min-height: auto;
