Verify projects section - All 15 projects confirmed: Saheli, CADD, AI Career Compass, RakshaMitra, Imran, NKOCET, ORCHATHON 2K25, Sajid, AgriConnect, Carbon Guard, E-Commerce, TechWorld, Weather, CareerPilot, GitHub

--- a/PortfolioApp/Views/Home/Index.cshtml
+++ b/PortfolioApp/Views/Home/Index.cshtml
@@ -335,7 +335,7 @@
   </div>
 </section>
 
-<!-- Projects Section -->
+<!-- Projects Section - All 15 Projects in Order -->
 <section id="projects" style="padding: 40px 20px; background-color: #1b1b1b;">
   <h2 style="text-align: center; color: #fff; font-size: 2rem; margin-bottom: 30px;">
     My <span style="color: #ff004f;">Projects</span>
